Update to last version of SparqlBlocks

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
     <p class="lead">a library to build SPARQL queries with blocks</p>
     <p class="lead"><a href="demo" target="_blank">Check the Online Demo</a></p>
     <p class="lead"><a href="demo/?mode=eval" target="_blank">Follow the Step-by-Step Tutorial</a></p>
+    <p class="lead">
+      <a href="https://miguelceriani.typeform.com/to/NOxaTl"
+        target="_blank">Learn and Test the Tool (to Help us Evaluating it)!</a></p>
     <img height="350px" src="img/beatles-after.png">
     <!-- <h2>Repository</h2>
     <p><a href="https://github.com/miguel76/SparqlBlocks">miguel76/SparqlBlocks</a></p> -->
